--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Estruturas Switch Case JavaScript</title>
+  <title>Códigos de cores em JavaScript</title>
   <style>
     body{
       font-size: 100px;
